# epitech

./: README.md  wercker.yml
tek1/Graphical/gfx_scroller/: .clang_complete  CMakeLists.txt  Makefile  megalovania
tek1/Graphical/gfx_scroller/include/: megalovania.h
tek1/Graphical/gfx_scroller/ressources/: darude.bsf  test.bsf
tek1/Graphical/gfx_scroller/srcs/: .gitignore  main.c
tek1/Graphical/gfx_scroller/srcs/event/: keys.c
tek1/Graphical/gfx_scroller/srcs/front/: front_draw.c
tek1/Graphical/gfx_scroller/srcs/loop/: initialization.c  loading.c  loop.c  names.c  sans.c
tek1/Graphical/gfx_scroller/srcs/misc/: draw_square.c  fill.c  line.c  pixel.c  tektext.c
tek1/Graphical/gfx_scroller/srcs/sample/: sample.c
tek1/Graphical/gfx_scroller/srcs/sprite/: draw_sprite.c  peanut.c
tek1/Graphical/gfx_scroller/srcs/stars/: draw_star.c  gen_stars.c
tek2/ASM/asm_minilibc/Tests/: CMakeLists.txt  memcpy.cpp  memmove.c  memmove.cpp  memset.cpp  rindex.cpp  strcasecmp.cpp  strchr.cpp  strcmp.cpp  strcspn.cpp  strlen.cpp  strncmp.cpp  strpbrk.cpp  strstr.cpp
tek2/C++/cpp_arcade/: CMakeLists.txt  Makefile
tek2/C++/cpp_arcade/ressources/sprites/: pacman.sprite
tek2/C++/cpp_arcade/src/: Makefile  main.cpp
tek2/C++/cpp_arcade/src/errors/: Error.hpp
tek2/C++/cpp_arcade/src/games/: Makefile
tek2/C++/cpp_arcade/src/interfaces/: IEvent.hpp  IFrame.hpp  IGame.hpp  IGraphic.hpp  IPicture.hpp  ISound.hpp  ISprite.hpp  Protocol.hpp  Structures.hpp
tek2/C++/cpp_arcade/src/libs/: Makefile
tek2/C++/cpp_indie_studio/: .gitignore  .highscore  CMakeLists.txt  Makefile  basicIA.py  hardIA.py  maps.json  sources.mk
tek2/C++/cpp_indie_studio/assets/AquaBomb/: AquaBomb.mtl
tek2/C++/cpp_indie_studio/assets/BouncingBomb/: BouncingBomb.mtl
tek2/C++/cpp_indie_studio/assets/FireBomb/: Bomb.mtl
tek2/C++/cpp_indie_studio/assets/IceBomb/: IceBomb.mtl
tek2/C++/cpp_indie_studio/assets/LandMine/: LandMine.mtl
tek2/C++/cpp_indie_studio/assets/LightBomb/: LightBomb.mtl
tek2/C++/cpp_indie_studio/assets/MegaBomb/: MegaBomb.mtl
tek2/C++/cpp_indie_studio/assets/PowerBomb/: PowerBomb.mtl
tek2/C++/cpp_indie_studio/assets/Splash/: AnasIcon.mtl  AnasIconThicker.mtl  Icon.mtl
tek2/C++/cpp_indie_studio/assets/WindBomb/: WindBomb.mtl
tek2/C++/cpp_indie_studio/assets/font/: font.xml
tek2/C++/cpp_indie_studio/assets/models/: BombPowerUp.mtl  PierceBombPowerUp.mtl  SkatePowerUp.mtl  SkullPowerUp.mtl  bomberman_drop.b3d  bomberman_run.b3d  bomberman_stand.b3d  brick.mtl  cube.mtl  firePowerUp.mtl  minecraftBox.mtl  minecraftBrick.mtl
tek2/C++/cpp_indie_studio/deployment/linux/: install.sh
tek2/C++/cpp_indie_studio/include/: Engine.hpp  Error.hpp  IrrlichtWrapper.hpp
tek2/C++/cpp_indie_studio/maps/: arena.json  modele.json  modele.json.save  test.json.save
tek2/C++/cpp_indie_studio/sources/: main.cpp
tek2/C++/cpp_nanotekspice/: .gitignore  CMakeLists.txt  Makefile
tek2/C++/cpp_nanotekspice/Tests/: ANDtest.cpp  C4081test.cpp  CMakeLists.txt  COMPUTE_LISTtest.cpp  DFLIPFLOPtest.cpp  FALSEtest.cpp  FOURBITADDERtest.cpp  INPUTtest.cpp  NANDtest.cpp  NORtest.cpp  NOTtest.cpp  ORtest.cpp  OUTPUTtest.cpp  PINtest.cpp  TRUEtest.cpp  XORtest.cpp
tek2/C++/cpp_nanotekspice/sources/: main.cpp
tek2/C++/cpp_plazza/: .gitignore  CMakeLists.txt  Makefile
tek2/C++/cpp_plazza/doxygen/: Doxyfile
tek2/C++/cpp_plazza/gui/: DesignedApp.pro  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui
tek2/C++/cpp_plazza/includes/: ACypher.hpp  Command.hpp  CondVar.hpp  ConnectorPipe.hpp  Office.hpp  Reception.hpp  Thread.hpp  ThreadPool.hpp  XorCracker.hpp
tek2/C++/cpp_plazza/sources/: CaesarCypher.cpp  Command.cpp  Mutex.cpp  Office.cpp  ProcessManager.cpp  Reception.cpp  Thread.cpp  ThreadPool.cpp  Utils.cpp  XorCracker.cpp  main.cpp
tek2/PSU/PSU_2016_lemipc/: .gitignore  CMakeLists.txt  Makefile  script.sh
tek2/PSU/PSU_2016_lemipc/bonus/: CMakeLists.txt  Makefile  script.sh
tek2/PSU/PSU_2016_lemipc/includes/: lem_ipc.h  solver.h
tek2/PSU/PSU_2016_lemipc/sources/: main.c
tek2/PSU/PSU_2016_myftp/: .gitignore  CMakeLists.txt  Makefile  sources.mk
tek2/PSU/PSU_2016_myftp/include/: commands.h  ftp.h  macro.h  misc.h  socket.h  structures.h
tek2/PSU/PSU_2016_myftp/src/: ftp_server.c  main.c
tek2/PSU/PSU_2016_myirc/: .gitignore  CMakeLists.txt  Makefile  auteur  client.mk  server.mk
tek2/PSU/PSU_2016_philo/: CMakeLists.txt  Makefile  deadlock_test.sh
tek2/PSU/PSU_2016_philo/bonus/: index.html  out.txt  sketch.js
tek2/PSU/PSU_2016_philo/includes/: extern.h  philo.h
tek2/PSU/PSU_2016_philo/sources/: main.c
tek2/PSU/PSU_2016_zappy/ai/: .gitignore  CMakeLists.txt  Makefile  main.cpp
tek2/PSU/PSU_2016_zappy/client/: CMakeLists.txt  Makefile
tek2/PSU/PSU_2016_zappy/server/: CMakeLists.txt  Makefile  main.c
tek3/AI/gomoku/: .gitignore  CMakeLists.txt  README.md  main.cpp
tek3/AI/gomoku/src/: Board.cpp  Board.hpp  BoardEvaluator.cpp  BoardEvaluator.hpp  Brain.cpp  Brain.hpp  CommandManager.cpp  CommandManager.hpp  Constants.hpp  Engine.cpp  Engine.hpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp
tek3/AI/gomoku/tenderflowlib/: stdafx.cpp
tek3/AI/gomoku/tendertests/: BoardTests.cpp  CommandManagerTests.cpp  MoveTests.cpp  stdafx.cpp
tek3/C++/cpp_rtype/: .gitignore  CMakeLists.txt  imgui.ini  main.cpp
tek3/C++/cpp_rtype/client/: .gitignore  CMakeLists.txt  assettypes.txt  componenttypes.txt
tek3/C++/cpp_rtype/cmake_modules/: FindSFML.cmake
tek3/C++/cpp_rtype/enemy/: CMakeLists.txt  Config.hpp
tek3/C++/cpp_rtype/server/: CMakeLists.txt
tek3/C++/cpp_rtype/shared/: EntityType.hpp
tek3/C++/cpp_spider/client/: CMakeLists.txt  server.crt
tek3/C++/cpp_spider/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  spider_server  tests
tek3/C++/cpp_zia/: .gitignore  CMakeLists.txt  zia.conf
tek3/C++/cpp_zia/api/: conf.h  http.h  module.h  net.h
tek3/C++/cpp_zia/keys/: cert.pem  key.pem
tek3/C++/cpp_zia/server/: CMakeLists.txt
tek3/C++/cpp_zia/tests/: CMakeLists.txt
tek3/C++/cpp_zia/zia_modules/: CMakeLists.txt  Config.hpp
(+4238 files in other folders)
